<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_catalog">

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="com.example.pocketmoster.ui.catalog.CatalogFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_market"
        android:name="com.example.pocketmoster.ui.market.MarketFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_market" />

    <fragment
        android:id="@+id/navigation_secret"
        android:name="com.example.pocketmoster.ui.secret.SecretFragment"
        android:label="@string/title_secret"
        tools:layout="@layout/fragment_secret" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.example.pocketmoster.ui.quiz.QuizFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.pocketmoster.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>